--- a/pages/key-insight-1.html
+++ b/pages/key-insight-1.html
@@ -38,20 +38,17 @@
                         in research. As a senior, I have pursued the <strong class="bold">Research Pathway of the Graduate with Leadership Distinction</strong>, 
                         where I showcase how research has followed me through the last 4 years. 
                     </p>
-                    <p>Before I began my senior thesis, an Honors College requirement, I had to become an expert at applying the concepts I learned by 
-                        conducting countless literature reviews, hypothesizing a solution for a problem, and implementing a solution. I decided to 
-                        pursue my major in Public Health, for which I was required to take a series of three Health Promotion, Education, and Behavior 
-                        (HPEB) classes. In spring of 2023, I enrolled in <strong class="bold">HPEB 470 Principles of Global Health</strong> (my second HPEB class), where I learned 
-                        about the driving <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank" rel="noopener noreferrer"><strong>ethical concepts 
-                        in research, clinic, public health, and global health settings</strong></a>. In clinical settings, healthcare teams must practice autonomy (a patient’s right to 
-                        ultimate authority over decisions about their healthcare), <strong class="bold">beneficence</strong> (the physician’s responsibility “to do good”), 
-                        <strong class="bold">non-maleficence </strong>(“to do no harm”), and <strong class="bold">justice</strong> (treating all patients equitably). 
-                        In all three HPEB classes, I collaborated with a group to complete an educational and promotional presentation targeted to a high-risk 
-                        population group to address a public health problem. In HPEB 470, I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank" 
-                        rel="noopener noreferrer"><strong>infographic presentation</strong></a> educating the public about HIV/AIDS in South Africa. Through the process, 
-                        I further learned about the stigma towards this public health issue and the importance of privacy when an individual is diagnosed. The guiding principles I have 
-                        stated are important for physicians to follow so a patient feels safe. Through discussions in class, I learned that even among classmates, trust is required to 
-                        have open conversations that combine statistics and beliefs, especially when talking about controversial topics, stigmatized issues, and items that are personal for myself and peers. 
+                    <p>Before I began my senior thesis, an Honors College requirement, I had to become an expert at applying the concepts I learned by conducting countless literature reviews, 
+                        hypothesizing a solution for a problem, and implementing a solution. I decided to pursue my major in Public Health, for which I was required to take a series of three 
+                        Health Promotion, Education, and Behavior (HPEB) classes. In spring of 2023, I enrolled in <strong class="bold">HPEB 470 Principles of Global Health</strong>, where I learned about the driving 
+                        <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank">ethical concepts in research, clinic, public health, and global health settings</a> (Artifact, HPEB 470 Notes). In clinical settings, healthcare teams must practice autonomy (a patient’s 
+                        right to ultimate authority over decisions about their healthcare), <strong class="bold">beneficence</strong> (the physician’s responsibility “to do good”), 
+                        <strong class="bold">non-maleficence</strong> (“to do no harm”), and <strong class="bold">justice </strong> (treating all patients equitably). In all HPEB 470, I collaborated with 
+                        a group to complete an educational and promotional presentation targeted to a high-risk population group to address a public health problem. I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank">infographic presentation</a>
+                        (Artifact, HPEB 470 Presentation) educating the public about HIV/AIDS in South Africa. Through the process, I further learned about the stigma towards this public health issue and 
+                        the importance of privacy when an individual is diagnosed. The guiding principles I have stated are important for physicians to follow so a patient feels safe. Through discussions 
+                        in class, I learned that even among classmates, trust is required to have open conversations that combine statistics and beliefs, especially when talking about controversial topics, 
+                        stigmatized issues, and items that are personal for myself and peers.
                     </p>
                     <p>During the summer and fall of 2024, I had the opportunity to complete an <strong class="bold">internship with Language Services at Prisma Health</strong> 
                         in my hometown, Greenville, SC and continue during the fall semester in Columbia, SC. Over the course of 7 months, I shadowed Spanish medical interpreters 
