--- a/pages/key-insight-1.html
+++ b/pages/key-insight-1.html
@@ -41,11 +41,11 @@
                     <p>Before I began my senior thesis, an Honors College requirement, I had to become an expert at applying the concepts I learned by conducting countless literature reviews, 
                         hypothesizing a solution for a problem, and implementing a solution. I decided to pursue my major in Public Health, for which I was required to take a series of three 
                         Health Promotion, Education, and Behavior (HPEB) classes. In spring of 2023, I enrolled in <strong class="bold">HPEB 470 Principles of Global Health</strong>, where I learned about the driving 
-                        <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank">ethical concepts in research, clinic, public health, and global health settings</a> (Artifact, HPEB 470 Notes). In clinical settings, healthcare teams must practice autonomy (a patient’s 
+                        <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank">ethical concepts in research, clinic, public health, and global health settings (Artifact, HPEB 470 Notes)</a> . In clinical settings, healthcare teams must practice autonomy (a patient’s 
                         right to ultimate authority over decisions about their healthcare), <strong class="bold">beneficence</strong> (the physician’s responsibility “to do good”), 
                         <strong class="bold">non-maleficence</strong> (“to do no harm”), and <strong class="bold">justice </strong> (treating all patients equitably). In all HPEB 470, I collaborated with 
-                        a group to complete an educational and promotional presentation targeted to a high-risk population group to address a public health problem. I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank">infographic presentation</a>
-                        (Artifact, HPEB 470 Presentation) educating the public about HIV/AIDS in South Africa. Through the process, I further learned about the stigma towards this public health issue and 
+                        a group to complete an educational and promotional presentation targeted to a high-risk population group to address a public health problem. I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank">infographic presentation (Artifact, HPEB 470 Presentation)</a>
+                         educating the public about HIV/AIDS in South Africa. Through the process, I further learned about the stigma towards this public health issue and 
                         the importance of privacy when an individual is diagnosed. The guiding principles I have stated are important for physicians to follow so a patient feels safe. Through discussions 
                         in class, I learned that even among classmates, trust is required to have open conversations that combine statistics and beliefs, especially when talking about controversial topics, 
                         stigmatized issues, and items that are personal for myself and peers.
@@ -125,7 +125,7 @@
                             <img src="../artifacts/Artifact4_LanguageAssessmentScore.png" alt="artifact 1">
                         </div>
                     </div>
-                    <div class="artifact-two">
+                    <!-- <div class="artifact-two">
                         <h3>Artifact 2</h3>
                         <p>This is a final project from my HPEB 300 class where I, along with my group, created an intervention to "Cut our the Fats!" to help decrease risk for heart attacks. </p>
                         <div class="iframe">
@@ -138,7 +138,7 @@
                         <div class="iframe">
                             <iframe src="../artifacts/artifact3_CommunityHealthAnalysis.pdf" width="75%" height="600px"></iframe>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div> 
         </main>            
